# acs_1_reading_speed_test

./: .gitignore  CMakeLists.txt  README.md  a.out  experiments.cpp  file_readers.cpp  file_readers.h  main.cpp  test_file.txt  test_small.txt  words_count.cpp  words_count.h
